# agda_tui

./: Cargo.toml  README.md
src/: app.rs  events.rs  main.rs  ui.rs
src/agda/: process.rs  protocol.rs
